# kdev-golang-plugin

kdevplatform/interfaces/: ipatchdocument.h
kdevplatform/plugins/: CMakeLists.txt
kdevplatform/plugins/cvs/: importdialog.h
kdevplatform/plugins/go_lang/: CMakeLists.txt  golangplugin.cpp  golangplugin.cpp~  golangplugin.h  kdevgolang.desktop  kdevgolang.desktop~
kdevplatform/vcs/dvcs/test2/: dvcsjobTest.h
